feat: add get product functionality
